orchestration-test-output.txt

> youtubex-studio-clone@2.0.0 orchestrate:typescript
> node scripts/typescript-error-orchestrator.js

file:///home/runner/work/ytMain/ytMain/scripts/typescript-error-orchestrator.js:629
      duration: \`\${duration}s\`,
                ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:431:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:478:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:110:19)

Node.js v20.19.4
